PycharmProjects/fenics/Mindlin_Phs_fenics/jitfailure-dolfin_expression_9b1f4e6c7b5c52b952b607f7934b8811/error.log
/tmp/tmpb0lpwkzs/dolfin_expression_9b1f4e6c7b5c52b952b607f7934b8811.cpp: In member function ‘virtual void dolfin::dolfin_expression_9b1f4e6c7b5c52b952b607f7934b8811::eval(Eigen::Ref<Eigen::Matrix<double, -1, 1> >, Eigen::Ref<const Eigen::Matrix<double, -1, 1> >) const’:
/tmp/tmpb0lpwkzs/dolfin_expression_9b1f4e6c7b5c52b952b607f7934b8811.cpp:63:34: error: ‘lx’ was not declared in this scope
           values[0] = A*sin(2*pi/lx*x[0]);
                                  ^
